--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "rice-cooker",
   "version": "0.1.0",
+  "homepage": "https://shapidesign.github.io/rice-cooker",
   "private": true,
   "dependencies": {
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.0",
-    "web-vitals": "^2.1.0",
-    "date-fns": "^2.30.0"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,8 +42,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0"
   }
 }
